re-rendered entire website, fixed white space. mobile app complele

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html, body, #root {
   margin: 0;
   padding: 0;
   min-height: 100%;
-  background-color: #121212;
+  background-color: #000000;
   width: 100%;
   
 }
@@ -33,12 +33,14 @@ html, body, #root {
 }
 
 
+
 .project-card {
   position: relative;
   border-radius: 0.5rem;
   background-color: transparent;
   border: 2px solid #6b21a8;
   overflow: hidden;
+  
 }
 
 .project-card::before {
